# pencil-producer-se-project

./: .gitignore  CMakeLists.txt  README.md  references.json
PencilProducer/: APM.cpp  APM.h  CMakeLists.txt  Pencil_Producer  Pencil_Producer.pro  gameover.cpp  gameover.h  gameover.ui  images.qrc  imagesss.qrc  img.qrc  inventory.cpp  inventory.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scoreboard.cpp  scoreboard.h  test.json  wallet.cpp  wallet.h
doc/: Doxyfile.in
test/: CMakeLists.txt  test.cpp
